Added some error handling middleware , some more components and implemented routing

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!(accservice.currentuser$ | async)" class="container">
-    <h1>ReciWeb : Recipes all around the world</h1>
+    <h1><i class="bi bi-egg-fried"></i> ReciWeb : Recipes all around the world</h1>
     <h3>Find Any recipe in the world and share yours with us <br> Sign up now !</h3>
 
     <div class="container mt-3" style="margin-left: -15px;">
