--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,50 +1,52 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
     <div class="container">
-      <a class="navbar-brand" routerLink="/">ReciWeb</a>
+      <a class="navbar-brand" routerLink="/"><i class="bi bi-egg-fried"></i> ReciWeb</a>
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link">My Recipes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link">Featured</a>
+            <a class="nav-link" routerLink="/myrecipes">My Recipes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" >Our blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" >About Us</a>
-          </li>
-          <li class="nav-item">
             <div class="dropdown" dropdown>
             <a class="nav-link dropdown-toggle" dropdownToggle >Categories</a>
             <div class="dropdown-menu" *dropdownMenu>
-                <a class="dropdown-item" >Breakfast</a>
-                <a class="dropdown-item" >Lunch</a>
-                <a class="dropdown-item" >Dinner</a>
                 <a class="dropdown-item" >Appetizers</a>
-                <a class="dropdown-item" >Desserts</a>
-                <a class="dropdown-item" >Vegetarian</a>
-                <a class="dropdown-item" >Snacks</a>
                 <a class="dropdown-item" >Beverages and Drinks</a>
+                <a class="dropdown-item" >Breakfast</a>
+                <a class="dropdown-item" >Desserts</a>
+                <a class="dropdown-item" >Dinner</a>
+                <a class="dropdown-item" >Lunch</a>
+                <a class="dropdown-item" >Snacks</a>
+                <a class="dropdown-item" >Vegetarian</a>
             </div>
             </div>
           </li>
 
         </ul>
-        <form class="d-flex" style="margin-right: 150px;">
-          <input class="form-control me-sm-2" type="search" placeholder="Search">
-          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        <form class="d-flex" style="margin-right: 250px;">
+          <input class="form-control me-sm-2" type="search" placeholder="Browse Recipes">
+          <button class="btn btn-outline-secondary my-2 my-sm-0 text-light" type="submit" >Search</button>
         </form>
     </div>
     <ul class="navbar-nav" style="margin-right: 55px;">
       <li class="nav-item">
-        <div class="dropdown" dropdown placement="bottom right" >
+        <div class="dropdown" dropdown placement="right" >
+          <a class="nav-link"><i class="bi bi-plus-square" style="font-size: 24px;" dropdownToggle></i></a>
+          <div class="dropdown-menu dropdown-menu-right" *dropdownMenu>
+            <a class="dropdown-item" routerLink="/myrecipes/createrecipe" >Create new recipe</a>
+        </div>
+        </div>
+      </li>
+      <li class="nav-item">
+        <div class="dropdown" dropdown placement="bottom right"  >
         <a class="nav-link dropdown-toggle" dropdownToggle ><i class="bi bi-person" style="font-size: 24px;" ></i></a>
-        <div class="dropdown-menu accdropdownmenu dropdown-menu-right" *dropdownMenu>
-            <a class="dropdown-item" >Sign up</a>
-            <a class="dropdown-item" >Login</a>
-            <a class="dropdown-item" >Edit Profile</a>
-            <a class="dropdown-item" >Logout</a>
+        <div class="dropdown-menu  dropdown-menu-right" *dropdownMenu>
+            <a *ngIf="!(accservice.currentusersource | async)" class="dropdown-item" routerLink="/login" >Login</a>
+            <a *ngIf="!(accservice.currentusersource | async)" class="dropdown-item" routerLink="/register">Sign up</a>
+            <a *ngIf="(accservice.currentusersource | async)"  class="dropdown-item"  >Edit Profile</a>
+            <a *ngIf="(accservice.currentusersource | async)"  class="dropdown-item" (click)="logout()" >Logout</a>
         </div>
         </div>
       </li>
