--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -3,10 +3,21 @@
       <a class="navbar-brand" routerLink="/"><i class="bi bi-egg-fried"></i> ReciWeb</a>
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/myrecipes">My Recipes</a>
+            <a class="nav-link" routerLink="/explore" 
+               routerLinkActive="active"            
+              >Explore</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" >Our blog</a>
+            <a class="nav-link" routerLink="/myrecipes" 
+               *ngIf="(this.accservice.currentusersource | async)"
+               routerLinkActive="active"       
+               >My Recipes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" 
+               routerLink="/members" 
+               routerLinkActive="active"       
+               >ReciChefs</a>
           </li>
           <li class="nav-item">
             <div class="dropdown" dropdown>
@@ -25,7 +36,7 @@
           </li>
 
         </ul>
-        <form class="d-flex" style="margin-right: 250px;">
+        <form class="d-flex" style="margin-right: 220px;">
           <input class="form-control me-sm-2" type="search" placeholder="Browse Recipes">
           <button class="btn btn-outline-secondary my-2 my-sm-0 text-light" type="submit" >Search</button>
         </form>
