Added Jwt Interceptor

--- a/client/src/app/members/member-card/member-card.component.css
+++ b/client/src/app/members/member-card/member-card.component.css
@@ -25,12 +25,13 @@
     transition-duration: 0.7s;
     transition-timing-function: ease-out;
     opacity: 1;
+    
 
 }
 
 .member-icons {
     position: absolute;
-    bottom: 15%;
+    bottom: 0;
     left: 0;
     right: 0;
     margin-left: auto;
