--- a/client/src/app/members/members-details/members-details.component.css
+++ b/client/src/app/members/members-details/members-details.component.css
@@ -1,5 +1,22 @@
-.profilepic {
-    border-radius: 90px;
-    margin-top: -70px;
-    transform: scale(0.8 ,0.8);
+.card-img-wrapper img {
+    transform: scale(1.1 ,1.1);
+
+    margin-top: 20px;
+    border-radius: 80px;
+}
+.card-img-wrapper {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.col-8 {
+    height: 612px;
+}
+
+.gallery {
+    height: 300px;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
 }
