--- a/client/src/app/members/members-details/members-details.component.html
+++ b/client/src/app/members/members-details/members-details.component.html
@@ -1,11 +1,55 @@
-<div class="text-center" *ngIf="member">
-    <img src="{{member.profilePhotoUrl}}" class="profilepic mb-2">
-    <h1>{{member.username}}</h1>
-    <p class="lead">{{member.about}}</p>
-    <div class="row" *ngFor="let recipe of recipes" >
-        <div class="col-4">
-        <app-member-recipe-card [recipe]="recipe" ></app-member-recipe-card>
+<div class="row">
+<div class="col-4" *ngIf="member">
+    <div class="card mb-3 bg-secondary text-white">
+        <div class="card-img-wrapper justify-content-center">
+            <img  src="{{member.profilePhotoUrl}}" alt="{{member.username}}">
         </div>
-    </div>
+        <h3 class="card-header mt-3">{{member.username}} <p class="card-subtitle mt-1">
+            <strong>Age </strong>
+            {{member.age}}</p></h3>
+        <div class="card-body">
+          <p class="card-text"><strong>ABOUT</strong> : <br> {{member.about}}</p>
+        </div>
+        <div class="card-body">
+        <p class="card-text"><strong>SPECIALITY</strong> : <br> {{member.specialities}}</p>
+        </div>
+</div>
+</div>
 
+<div class="col-8 " *ngIf="member">
+    <div class="mb-3 mt-2">
+        <h1>Recipes</h1>
+    </div>
+    <tabset class="recipe-tabs" >
+        <tab *ngFor="let recipe of member.recipes" heading="{{recipe.title}}" class="mt-2"
+     (click)="getImages(recipe)">
+            <tabset class="subrecipe-tabs">
+                <tab heading="Ingredients" class="tab">
+                    <ul class="list-group mt-3">
+                        <li class="list-group-item justify-content-between align-items-center" 
+                            *ngFor="let ingredient of recipe.ingredients">
+                            {{ingredient.name}}
+                        </li>
+                    </ul>
+                </tab>
+                <tab heading="Instructions" >
+                    <h6 class="mt-3 ">{{recipe.instructions}}</h6>
+                </tab>
+                <tab heading="Category" >
+                    <h1 class="mt-3">{{recipe.category}}</h1>
+                </tab>
+                <tab heading="Photos" #phototab="tab" >
+                    <gallery  *ngIf="phototab.active"
+                             [items]="images"
+                             [thumbDetached]="true"
+                             [thumbHeight]="40"
+                             [thumbWidth]="40"
+                             class="gallery"></gallery>
+                            
+                </tab>
+            </tabset>
+
+        </tab>
+    </tabset>
+</div>
 </div>
