--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
     <div class="container">
       <a class="navbar-brand" routerLink="/"><i class="bi bi-egg-fried"></i> ReciWeb</a>
         <ul class="navbar-nav me-auto">
@@ -43,6 +43,6 @@
         </div>
       </li>
     </ul>
-
+    
 
   </nav>
