--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -1,5 +1,5 @@
 
-<div class="card border-secondary mb-3" *ngIf="member">
+<div class="card border-secondary mb-3" *ngIf="member" data-bs-theme="dark">
     <h6 class="card-header mb-2 text-center"> <i class="bi bi-person"></i> {{member.username}}</h6>
     <div class="card-img-wrapper text-center ">
         <img src="{{member.profilePhotoUrl}}" alt="{{member.username}}">
