--- a/client/src/app/members/members-details/members-details.component.html
+++ b/client/src/app/members/members-details/members-details.component.html
@@ -20,10 +20,9 @@
     <div class="mb-3 mt-2">
         <h1>Recipes</h1>
     </div>
-    <tabset class="recipe-tabs" >
-        <tab *ngFor="let recipe of member.recipes" heading="{{recipe.title}}" class="mt-2"
-     (click)="getImages(recipe)">
-            <tabset class="subrecipe-tabs">
+    <tabset class="recipe-tabs">
+        <tab *ngFor="let recipe of member.recipes" heading="{{recipe.title}}" class="mt-2">
+            <tabset class="subrecipe-tabs" *ngIf="recipe.isPublic">
                 <tab heading="Ingredients" class="tab">
                     <ul class="list-group mt-3">
                         <li class="list-group-item justify-content-between align-items-center" 
@@ -38,16 +37,19 @@
                 <tab heading="Category" >
                     <h1 class="mt-3">{{recipe.category}}</h1>
                 </tab>
-                <tab heading="Photos" #phototab="tab" >
-                    <gallery  *ngIf="phototab.active"
-                             [items]="images"
-                             [thumbDetached]="true"
-                             [thumbHeight]="40"
-                             [thumbWidth]="40"
-                             class="gallery"></gallery>
+                <tab heading="Photos" >
+                    <div class="container" style="max-width: fit-content;">
+                        <carousel [noPause]="false" [isAnimated]="true" [showIndicators]="true" >
+                            <slide *ngFor="let photo of recipe.photos" class="photoslide">
+                              <img src="{{photo.url}}" alt="recipe photo">
+                            </slide>
+                          </carousel>
+                        </div>
                             
                 </tab>
             </tabset>
+
+            <h1 *ngIf="!recipe.isPublic">This recipe is private.</h1>
 
         </tab>
     </tabset>
