--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
+<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container">
       <a class="navbar-brand" routerLink="/"><i class="bi bi-egg-fried"></i> ReciWeb</a>
         <ul class="navbar-nav me-auto">
@@ -37,7 +37,8 @@
         <div class="dropdown-menu  dropdown-menu-right" *dropdownMenu>
             <a *ngIf="!(accservice.currentusersource | async)" class="dropdown-item" routerLink="/login" >Login</a>
             <a *ngIf="!(accservice.currentusersource | async)" class="dropdown-item" routerLink="/register">Sign up</a>
-            <a *ngIf="(accservice.currentusersource | async)"  class="dropdown-item"  >Edit Profile</a>
+            <a *ngIf="(accservice.currentusersource | async)"  class="dropdown-item" 
+                routerLink="/member/editprofile"  >Edit Profile</a>
             <a *ngIf="(accservice.currentusersource | async)"  class="dropdown-item" (click)="logout()" >Logout</a>
         </div>
         </div>
