--- a/client/src/app/recipes/my-recipes/my-recipes.component.html
+++ b/client/src/app/recipes/my-recipes/my-recipes.component.html
@@ -1,1 +1,35 @@
-<p>my-recipes works!</p>
+<div class="mb-3">
+    <h1 >Recipes</h1>
+
+<tabset class="recipe-tabs " *ngIf="member">
+    <tab *ngFor="let recipe of member.recipes" heading="{{recipe.title}}" class="mt-2">
+        <span class="badge bg-primary mt-2" *ngIf="recipe.isPublic">Public</span>
+        <span class="badge bg-primary mt-2" *ngIf="!recipe.isPublic">Private</span>
+        <tabset class="subrecipe-tabs">
+            <tab heading="Ingredients" class="tab">
+                <ul class="list-group mt-3 ">
+                    <li class="list-group-item justify-content-between align-items-center" 
+                        *ngFor="let ingredient of recipe.ingredients">
+                        {{ingredient.name}}
+                    </li>
+                </ul>
+            </tab>
+            <tab heading="Instructions" >
+                <h6 class="mt-3 ">{{recipe.instructions}}</h6>
+            </tab>
+            <tab heading="Category" >
+                <h1 class="mt-3">{{recipe.category}}</h1>
+            </tab>
+            <tab heading="Photos" #phototab="tab" >
+                <div class="container" style="max-width: fit-content;">
+                <carousel [noPause]="false" [isAnimated]="true" [showIndicators]="true" >
+                    <slide *ngFor="let photo of recipe.photos" class="photoslide">
+                      <img src="{{photo.url}}" alt="recipe photo">
+                    </slide>
+                  </carousel>
+                </div>
+            </tab>
+        </tabset>
+
+    </tab>
+</tabset>
