--- a/client/src/app/members/members-details/members-details.component.html
+++ b/client/src/app/members/members-details/members-details.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row align-items-center">
 <div class="col-4" *ngIf="member">
     <div class="card mb-3 bg-secondary text-white">
         <div class="card-img-wrapper justify-content-center">
@@ -28,6 +28,7 @@
                         <li class="list-group-item justify-content-between align-items-center" 
                             *ngFor="let ingredient of recipe.ingredients">
                             {{ingredient.name}}
+                            
                         </li>
                     </ul>
                 </tab>
@@ -38,10 +39,10 @@
                     <h1 class="mt-3">{{recipe.category}}</h1>
                 </tab>
                 <tab heading="Photos" >
-                    <div class="container" style="max-width: fit-content;">
+                    <div class="container mt-3" style="max-width: fit-content;">
                         <carousel [noPause]="false" [isAnimated]="true" [showIndicators]="true" >
-                            <slide *ngFor="let photo of recipe.photos" class="photoslide">
-                              <img src="{{photo.url}}" alt="recipe photo">
+                            <slide *ngFor="let photo of recipe.photos" >
+                              <img src="{{photo.url}}" alt="recipe photo" class="form-control">
                             </slide>
                           </carousel>
                         </div>
