--- a/client/src/app/recipes/editrecipe/editrecipe.component.html
+++ b/client/src/app/recipes/editrecipe/editrecipe.component.html
@@ -1,1 +1,64 @@
-<p>editrecipe works!</p>
+   
+    <div class="col-12 " *ngIf="member">
+        <div class="mb-3 mt-2 d-flex align-items-center">
+            <h1>Edit Recipes</h1>
+            <button class="ms-4 me-4 btn btn-outline-success text-white btn-lg" 
+            [disabled]="!EditRecipeForm.dirty">Save Changes</button>
+            <alert type="info" *ngIf="EditRecipeForm.dirty">
+                <strong>Changes were made , </strong> Any unsaved changes will be lost
+              </alert>
+        </div>
+        <form #EditRecipeForm="ngForm" id="editrecipeform">
+        <tabset class="recipe-tabs" *ngIf="recipe" >
+            <tab heading="{{recipe.title}}" class="mt-2">
+                <tabset class="subrecipe-tabs">
+                    <tab heading="Ingredients" class="tab">
+                        <div class="col-6">
+                        <ul class="list-group mt-3">
+                            <li class="list-group-item justify-content-between align-items-center d-flex" 
+                                *ngFor="let ingredient of recipe.ingredients">
+                                <textarea 
+                                name="{{ingredient.name}}"
+                                [(ngModel)]="ingredient.name"
+                                class="form-control me-2" 
+                                rows="1">
+                                </textarea>
+                                <button class="btn btn-outline-danger btn-sm" (click)="RemoveIngredient(ingredient)">Delete Ingredient</button>
+                            </li>
+                            <button class="btn btn-outline-secondary mt-2 mb-2 text-white" 
+                            style="max-width: fit-content; margin-left: 32px;" (click)="AddIngredient()">
+                            + Add New Ingredient</button>
+                        </ul>
+                       </div>
+
+                    </tab>
+                    <tab heading="Instructions" >
+                        <h6 class="mt-3 ">
+                            <textarea 
+                            name="{{recipe.instructions}}"
+                            [(ngModel)]="recipe.instructions"
+                            class="form-control" 
+                            rows="8"></textarea>
+
+                        </h6>
+                    </tab>
+                    <tab heading="Category" >
+                        <div class="col-3">
+                        <h1 class="mt-3">
+                            <textarea 
+                            name="{{recipe.category}}"
+                            [(ngModel)]="recipe.category"
+                            class="form-control" 
+                            rows="1"></textarea>
+                        </h1>
+                      </div>
+                    </tab>
+                    <button class="btn btn-outline-danger mt-2 me-3">Delete this recipe</button>
+                </tabset>
+    
+            </tab>
+        </tabset>
+       </form>
+    </div>
+
+    
