--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center" style="margin-top: -75px;">
+<div class="container text-center">
     <br>
    <h2>Login</h2>
    <br>
