--- a/client/src/app/members/edit-profile/edit-profile.component.html
+++ b/client/src/app/members/edit-profile/edit-profile.component.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-4" *ngIf="member">
         <div class="card mb-3 bg-secondary text-white">
-            <div class="card-img-wrapper justify-content-center">
-                <img  src="{{member.profilePhotoUrl}}" alt="{{member.username}}">
+            <div class="card-img-wrapper justify-content-center" >
+                <img  src="{{member.profilePhotoUrl}}" alt="{{member.username}}" class="form-control" >
             </div>
             <div class="card-body mt-3">
                 <i class="bi bi-lock me-3"></i><strong>Account and Security</strong>
@@ -40,6 +40,13 @@
             name="name" 
             [(ngModel)]="member.name"
             rows="1"
+            class="form-control mb-2"
+            ></textarea>
+            <h3><strong>Age :</strong></h3>
+            <textarea 
+            name="age" 
+            [(ngModel)]="member.age"
+            rows="1"
             class="form-control"
             ></textarea>
             </div>
@@ -65,20 +72,38 @@
             </div>
         </tab>
         <tab heading="Recipes">
-        <accordion class="mt-3">
+        <accordion class="mt-3 form-control" *ngIf="member.recipes.length > 0">
           <accordion-group *ngFor="let recipe of member.recipes" heading="{{recipe.title}}">
-               <div class="mt-1">
-                <button class="btn btn-outline-success me-2" (click)="editRecipeHover(recipe.title)">Edit Recipe</button>
-                <button class="btn btn-outline-danger me-5">Delete Recipe</button>
+               <div class="mt-1" >
+                <button class="btn btn-outline-success me-2" (click)="editRecipeHover(recipe.title)"
+                 type="button">Edit Recipe</button>
+                <button class="btn btn-outline-danger me-5" (click)="openDeleteModal(DeleteModal)" 
+                 type="button">Delete Recipe</button>
+                 <ng-template #DeleteModal class="form-control">
+                    <h5 class="modal-title text-center">Are you sure you want to delete this recipe ?</h5>
+        
+                  <div class="modal-body d-flex">
+                    <button class="btn btn-danger form-control me-2" (click)="DeleteRecipe(recipe.id)">Yes , Delete it</button>
+                    <button type="button" class="btn btn-info form-control" (click)="modalRef?.hide()">
+                         No , Go back
+                      </button>
+                  </div>
+                </ng-template>
                 <span class="badge bg-primary ms-5" *ngIf="recipe.isPublic">Public</span>
                 <span class="badge bg-primary ms-5" *ngIf="!recipe.isPublic">Private</span>
                </div>
           </accordion-group>
           </accordion>
+          <div class="mt-3"  *ngIf="member.recipes.length == 0">
+                <h1>You dont have any recipes yet !</h1>
+                <button class="btn btn-outline-secondary" type="button" (click)="createRecipeHover()" >Create a new Recipe</button>  
+            </div>
 
         </tab>
     </tabset>
         </form>
+
+
     </div>
 
  
