--- a/client/src/app/recipes/editrecipe/editrecipe.component.html
+++ b/client/src/app/recipes/editrecipe/editrecipe.component.html
@@ -1,32 +1,40 @@
    
-    <div class="col-12 " *ngIf="member">
+    <div class="col-12 " *ngIf="member && recipe">
+        <form #editrecipeform="ngForm" id="editrecipeform" (ngSubmit)="EditRecipe()" >
         <div class="mb-3 mt-2 d-flex align-items-center">
-            <h1>Edit Recipes</h1>
-            <button class="ms-4 me-4 btn btn-outline-success text-white btn-lg" 
-            [disabled]="!EditRecipeForm.dirty">Save Changes</button>
-            <alert type="info" *ngIf="EditRecipeForm.dirty">
+            <h1>Edit Recipe : <textarea class="form-control me-2" rows="1" name="title" [(ngModel)]="recipe.title">
+            </textarea> </h1> 
+
+            <alert type="info" *ngIf="editrecipeform.dirty">
                 <strong>Changes were made , </strong> Any unsaved changes will be lost
               </alert>
         </div>
-        <form #EditRecipeForm="ngForm" id="editrecipeform">
+            <div>
+            <button
+            type="submit"
+            class="me-4 mb-3 btn btn-outline-success text-white btn-lg" 
+            [disabled]="!editrecipeform.dirty">Save Changes</button>
+            <button
+            type="button"
+            class="mb-3 btn btn-outline-danger text-white btn-lg" >Delete Recipe</button>
+            </div>
         <tabset class="recipe-tabs" *ngIf="recipe" >
-            <tab heading="{{recipe.title}}" class="mt-2">
-                <tabset class="subrecipe-tabs">
+            
                     <tab heading="Ingredients" class="tab">
                         <div class="col-6">
                         <ul class="list-group mt-3">
-                            <li class="list-group-item justify-content-between align-items-center d-flex" 
+                            <li class="list-group-item  d-flex " style="text-align: left;" 
                                 *ngFor="let ingredient of recipe.ingredients">
                                 <textarea 
-                                name="{{ingredient.name}}"
+                                name="{{ingredient.name}}" 
                                 [(ngModel)]="ingredient.name"
                                 class="form-control me-2" 
                                 rows="1">
                                 </textarea>
-                                <button class="btn btn-outline-danger btn-sm" (click)="RemoveIngredient(ingredient)">Delete Ingredient</button>
+                                <button class="btn btn-outline-danger btn-sm" type="button" (click)="DeleteIngredient(ingredient)" >Delete Ingredient</button>
                             </li>
                             <button class="btn btn-outline-secondary mt-2 mb-2 text-white" 
-                            style="max-width: fit-content; margin-left: 32px;" (click)="AddIngredient()">
+                            style="max-width: fit-content; margin-left: 32px;" type="button" (click)="AddIngredient()">
                             + Add New Ingredient</button>
                         </ul>
                        </div>
@@ -35,7 +43,7 @@
                     <tab heading="Instructions" >
                         <h6 class="mt-3 ">
                             <textarea 
-                            name="{{recipe.instructions}}"
+                            name="instructions"
                             [(ngModel)]="recipe.instructions"
                             class="form-control" 
                             rows="8"></textarea>
@@ -46,17 +54,14 @@
                         <div class="col-3">
                         <h1 class="mt-3">
                             <textarea 
-                            name="{{recipe.category}}"
+                            name="category"
                             [(ngModel)]="recipe.category"
                             class="form-control" 
                             rows="1"></textarea>
                         </h1>
                       </div>
                     </tab>
-                    <button class="btn btn-outline-danger mt-2 me-3">Delete this recipe</button>
-                </tabset>
-    
-            </tab>
+                     
         </tabset>
        </form>
     </div>
