--- a/client/src/app/recipes/my-recipes/my-recipes.component.css
+++ b/client/src/app/recipes/my-recipes/my-recipes.component.css
@@ -1,9 +1,13 @@
 .photoslide img {
-    margin-left: auto;
-    margin-right: auto;
-    transform: scale(0.9, 0.9);
-    border-radius: 30px;
+    max-width: calc(120%);
+    max-height: 80%;
+    transform: scale(1.1 , 1.1);
     display: block;
-    align-items: center;
+    margin-right: auto;
+    margin-left: -30px;
+    overflow: hidden;
 }
 
+.photoslide {
+    overflow: hidden;
+}
