--- a/client/src/app/recipes/my-recipes/my-recipes.component.html
+++ b/client/src/app/recipes/my-recipes/my-recipes.component.html
@@ -1,35 +1,35 @@
 <div class="mb-3">
-    <h1 >Recipes</h1>
+    <h1 >Your Recipes</h1>
+  <ng-container *ngIf="member">
+    <div  class="row">
+        <div class="col-5" *ngFor="let recipe of member.recipes">
+    <div class="card mb-3 " style="max-width: 30rem;" >
+        <h3 class="card-header">{{recipe.title}}</h3>
+        <div class="card-body">
+          <h5 class="card-title">{{recipe.category}}</h5>
+          <h6 class="card-subtitle text-muted" *ngIf="recipe.isPublic">Public</h6>
+          <h6 class="card-subtitle text-muted" *ngIf="!recipe.isPublic">Private</h6>
+        </div>
 
-<tabset class="recipe-tabs " *ngIf="member">
-    <tab *ngFor="let recipe of member.recipes" heading="{{recipe.title}}" class="mt-2">
-        <span class="badge bg-primary mt-2" *ngIf="recipe.isPublic">Public</span>
-        <span class="badge bg-primary mt-2" *ngIf="!recipe.isPublic">Private</span>
-        <tabset class="subrecipe-tabs">
-            <tab heading="Ingredients " class="tab">
-                <ul class="list mt-3 ">
-                    <li 
-                        *ngFor="let ingredient of recipe.ingredients">
-                        {{ingredient.name}}
-                    </li>
-                </ul>
-            </tab>
-            <tab heading="Instructions" >
-                <h6 class="mt-3 ">{{recipe.instructions}}</h6>
-            </tab>
-            <tab heading="Category" >
-                <h1 class="mt-3">{{recipe.category}}</h1>
-            </tab>
-            <tab heading="Photos" #phototab="tab" >
-                <div class="container" style="max-width: fit-content;">
-                <carousel [noPause]="false" [isAnimated]="true" [showIndicators]="true" >
-                    <slide *ngFor="let photo of recipe.photos" class="photoslide">
-                      <img src="{{photo.url}}" alt="recipe photo">
-                    </slide>
-                  </carousel>
-                </div>
-            </tab>
-        </tabset>
-
-    </tab>
-</tabset>
+        <div class="card-body mb-4 " >
+            <carousel class="form-control" 
+            style="align-items: center; margin-left: auto; margin-right: auto;" >
+                <slide *ngFor="let photo of recipe.photos" class="form-control photoslide" style=" overflow: hidden;">
+                   <img src="{{photo.url}}" alt="">
+                </slide>
+            </carousel>
+        </div>
+        <ul class="list-group list-group-flush">
+            <h3 class="text-white text-center">Ingredients</h3>
+          <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">{{ingredient.name}}</li>
+        </ul>
+        <div class="card-body">
+          <h3 class="text-center">Instructions : </h3> {{recipe.instructions}}
+        </div>
+        <div class="card-footer text-muted text-center">
+           id : {{recipe.id}}
+        </div>
+       </div>
+    </div>
+    </div>
+    </ng-container>
