--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center" style="margin-top: -75px;">
+<div class="container text-center">
     <br>
    <h2 class="mb-3">Sign up</h2>
    <form #RegisterForm="ngForm" (ngSubmit)="Register()">
